tests/invalid/missing_interface_import3.m
:- module missing_interface_import3.
:- interface.

:- type key == int.
